# goit-py_web-hw-07

./: alembic.ini  home_work.sqlite  index.html  my_select.py  pyproject.toml  university.db
conf/: db.py  models.py
migrations/versions/: 3bf16c5f54bd_init.py
