[project]
name = "goit-py-web-hw-07"
version = "0.1.0"
description = ""
authors = [
    {name = "k2qw",email = "mironbogdan2008@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
